# jpp

./: LICENSE  README.md
app/JniSample/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/JniSample/app/src/androidTest/java/org/coderoller/jnisample/: ArrayUnitTest.java  ClassUnitTest.java  CreationUnitTest.java  ExampleInstrumentedTest.java  ExceptionUnitTest.java  FieldUnitTest.java  JvmUnitTest.java  MethodUnitTest.java  ObjectUnitTest.java  StaticFieldUnitTest.java  StaticMethodUnitTest.java
app/JniSample/app/src/main/: AndroidManifest.xml
app/JniSample/app/src/main/cpp/: JClass.cpp  JClass.h  JField.cpp  JField.h  JMethod.cpp  JMethod.h  JObject.cpp  JObject.h  JUtils.cpp  JUtils.h  array_tester.cpp  class_tester.cpp  creation_tester.cpp  exception_tester.cpp  field_tester.cpp  jvm_tester.cpp  method_tester.cpp  native-lib.cpp  object_tester.cpp  static_field_tester.cpp  static_method_tester.cpp
app/JniSample/app/src/main/cpp/jpp/: Array.cpp  Array.h  Cache.cpp  Cache.h  Class.cpp  Class.h  Env.cpp  Env.h  GlobalRef.cpp  GlobalRef.h  JVM.cpp  JVM.h  Monitor.cpp  Monitor.h  Object.cpp  Object.h  jpp.h  jpp_config.h
app/JniSample/app/src/main/cpp/jpp/internal/: common.cpp  common.h  type.cpp  type.h  utils.cpp  utils.h
app/JniSample/app/src/main/java/org/coderoller/jnisample/: MainActivity.java
app/JniSample/app/src/main/java/org/coderoller/jnisample/testers/: ArrayTester.java  ClassTester.java  CreationTester.java  ExceptionTester.java  FieldTester.java  JvmTester.java  MethodTester.java  ObjectTester.java  StaticFieldTester.java  StaticMethodTester.java
app/JniSample/app/src/main/res/layout/: activity_main.xml
app/JniSample/app/src/test/java/org/coderoller/jnisample/: ExampleUnitTest.java
doc/html/: Array_8h_source.html  Cache_8h_source.html  Class_8h_source.html  Env_8h_source.html  GlobalRef_8h_source.html  JVM_8h_source.html  Monitor_8h_source.html  Object_8h_source.html  annotated.html  classes.html  classjpp_1_1AbstractArray-members.html  classjpp_1_1AbstractArray.html  classjpp_1_1Array-members.html  classjpp_1_1Array.html  classjpp_1_1Cache-members.html  classjpp_1_1Cache.html  classjpp_1_1Class-members.html  classjpp_1_1Class.html  classjpp_1_1Env-members.html  classjpp_1_1Env.html  classjpp_1_1GlobalRef-members.html  classjpp_1_1GlobalRef.html  classjpp_1_1JVM-members.html  classjpp_1_1JVM.html  classjpp_1_1Monitor-members.html  (+15 more)
tools/: doxygen.cfg
(+10 files in other folders)
